wp-content/themes/core/components/header/subheader/css/subheader.pcss
/* -----------------------------------------------------------------------------
 *
 * Component: Subheader
 *
 * ----------------------------------------------------------------------------- */

.c-subheader {
	position: relative;
	display: flex;
	align-items: center;
	margin-bottom: var(--spacer-80);

	@media (--viewport-medium) {
		padding: var(--spacer-80) 0;
	}
}

.c-subheader--single {
	margin-bottom: 0;

	@media (--viewport-medium) {
		padding-top: var(--spacer-80);
	}
}

/* CASE: Page with featured image or a background color */
.c-subheader--has-background-color {
	background: var(--color-grey-light);
	color: var(--color-white);

	@media (--viewport-medium) {
		align-items: flex-end;
	}
}

/* -----------------------------------------------------------------------------
 * Subheader: Content
 * ----------------------------------------------------------------------------- */

.c-subheader__content {
	position: relative;
}

.c-subheader__content--single {
	max-width: var(--grid-8-col);
	margin: 0 auto;
}

.c-subheader__title {
	@mixin t-display;

	margin-top: var(--spacer-30);

	@media (--viewport-medium) {
		@mixin t-display-large;

		margin-top: var(--spacer-50);
	}
}

.c-subheader__meta {
	font-family: var(--font-family-serif);
	font-size: var(--font-size-body);
	max-width: var(--grid-8-col);
	margin: var(--spacer-30) auto 0;
	padding: var(--spacer-40) 0;
	border-top: 1px solid var(--color-border);
	border-bottom: 1px solid var(--color-border);

	@media (--viewport-medium) {
		display: flex;
		flex-flow: row nowrap;
		justify-content: space-between;
		align-items: flex-end;
		margin-top: var(--spacer-60);
	}

	.social-share-networks__item:first-child {
		margin-left: 0;
	}
}

.c-subheader__meta-author {

}

.c-subheader__meta-date {
	font-size: var(--font-size-body-small);
}

/* -----------------------------------------------------------------------------
 * Subheader: Image component
 * ----------------------------------------------------------------------------- */

.c-subheader__media {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

